--- a/als_thing/compute-similar-repo.ipynb
+++ b/als_thing/compute-similar-repo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "(81873,)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,6 +40,38 @@
    "source": [
     "np_features.shape\n",
     "np_keys.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repo_id = 3605299\n",
+    "repo_idies = np.where(np_keys == repo_id)\n",
+    "repo_idx = repo_idies[0][0]\n",
+    "sim_vals = np_features.dot(np_features[repo_idx]) / (np_la_norm * np_la_norm[repo_idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 1, 0])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argsort([5, 3, 1, 2])"
    ]
   },
   {
@@ -134,59 +166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "node\n",
-      "JavaScript\n",
-      "Node.js JavaScript runtime :sparkles::turtle::rocket::sparkles:\n",
-      "\n",
-      "chronic\n",
-      "Ruby\n",
-      "Chronic is a pure Ruby natural language date parser.\n",
-      "\n",
-      "hashie\n",
-      "Ruby\n",
-      "Hashie is a collection of classes and mixins that make hashes more powerful.\n",
-      "\n",
-      "friendly_id\n",
-      "Ruby\n",
-      "FriendlyId is the “Swiss Army bulldozer” of slugging and permalink plugins for ActiveRecord. It allows you to create pretty URL’s and work with human-friendly strings as if they were numeric ids for ActiveRecord models.\n",
-      "\n",
-      "pundit\n",
-      "Ruby\n",
-      "Minimal authorization through OO design and pure Ruby classes\n",
-      "\n",
-      "active_merchant\n",
-      "Ruby\n",
-      "Active Merchant is a simple payment abstraction library extracted from Shopify. The aim of the project is to feel natural to Ruby users and to abstract as many parts as possible away from the user to offer a consistent interface across all supported gateways.\n",
-      "\n",
-      "bullet\n",
-      "Ruby\n",
-      "help to kill N+1 queries and unused eager loading\n",
-      "\n",
-      "money\n",
-      "Ruby\n",
-      "A Ruby Library for dealing with money and currency conversion.\n",
-      "\n",
-      "brimir\n",
-      "Ruby\n",
-      "Email helpdesk built using Ruby on Rails and Zurb Foundation\n",
-      "\n",
-      "nodenv\n",
-      "Shell\n",
-      "Manage multiple NodeJS versions.\n",
-      "\n",
-      "localer\n",
-      "Ruby\n",
-      "Automatic detecting missing I18n translations tool.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "\n",
@@ -200,11 +182,7 @@
     "    response = requests.request(\"GET\", url, headers=headers)\n",
     "\n",
     "    resp_json = response.json()\n",
-    "    return '\\n'.join(map(lambda tt: tt or '', [resp_json['name'], resp_json['language'], resp_json['description']]))\n",
-    "\n",
-    "print(get_repo(searching_repoid))\n",
-    "print()\n",
-    "print('\\n\\n'.join([get_repo(rid) for sim, rid in zip(sims, rids)]))"
+    "    return '\\n'.join(map(lambda tt: tt or '', [resp_json['name'], resp_json['language'], resp_json['description']]))"
    ]
   },
   {
